# yt

./: LICENSE  README.md  pyproject.toml
.cursor/plans/: build_yt_cli_tool_9d878de2.plan.md  build_yt_cli_tool_ae21203a.plan.md
ref/: README.md
src/yt/: __init__.py  __main__.py  cli.py  config.py  formatter.py  prompt.md  transcript.py  translate.py  utils.py  whisper.py  youtube.py
